--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 <div class= "h-screen w-screen flex flex-col flex-wrap justify-center items-center bg-[#B7C9E2] ">
   <div class="rounded-2xl p-4 pb-10 bg-white max-w-max flex flex-col flex-wrap justify-center items-center">
-    <img class="rounded-xl max-w-[300px]" src="C:\Users\satve\Downloads\qr-code-component-main (2)\qr-code-component-main\images\image-qr-code.png" alt="QR Code IMAGE">
+    <img class="rounded-xl max-w-[300px]" src="./images/image-qr-code.png" alt="QR Code IMAGE">
 
     <h1 class="text-xl m-0 font-bold "><br>Improve your front-end</h1></h1><p class="text-xl font-bold">skills by building projects</p>
 
